--- a/app/views/v12/provider/view-vacancy/6b-check-share.html
+++ b/app/views/v12/provider/view-vacancy/6b-check-share.html
@@ -20,7 +20,7 @@ Manage vacancy
     
   <!-- list START       -->
         <p class="govuk-body" >
-          These applications will be shared anonymously with the employer to view in their Apprenticeship service account:
+          These applications will be shared anonymously with <b>Gloucestershire Health and Care NHS Foundation Trust</b> to view in their Apprenticeship service account:
         </p>
         <ul class="govuk-list govuk-list--bullet">
 
@@ -40,6 +40,8 @@ Manage vacancy
             {% endif %}
         </ul>
 <!-- list END -->
+
+<br>
 
 <!-- radio buttons START -->
         <div class="govuk-form-group">
