--- a/app/views/v12/provider/account/application-new.html
+++ b/app/views/v12/provider/account/application-new.html
@@ -16,18 +16,20 @@ Manage apprentices
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <section>
-      <h1 class="govuk-heading-xl govuk-!-margin-bottom-0">Rolo Tomasi</h1>
+      <h1 class="govuk-heading-xl govuk-!-margin-bottom-0">
+        Keith Stewart
+      </h1>
       <div class="govuk-!-margin-bottom-6">
-        <span class="govuk-!-font-weight-bold">Application ID: </span>1DAB217
+        <span class="govuk-!-font-weight-bold">Application ID: </span>678CFR0
       </div>
 
       <div class="panel panel-border-narrow">
         <p class="govuk-body">
-          Rolo Tomasi<br>13 Old Hinckley Road<br>Nuneaton<br>Warwickshire<br>CV10 0AA
+          Keith Stewart<br>13 Old Hinckley Road<br>Nuneaton<br>Warwickshire<br>CV10 0AA
         </p>
         <p class="govuk-body">
           07812345678
-          <br> <a href="mailto:faizal.dawood@domainname.co.uk">rolo.tomasi@domainname.co.uk</a>
+          <br> <a href="mailto:faizal.dawood@domainname.co.uk">keith.stewart@domainname.co.uk</a>
         </p>
       </div>
     </section>
@@ -145,7 +147,7 @@ Manage apprentices
           <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Status
+                What do you want to do with this application?
               </h1>
             </legend>
 
@@ -154,7 +156,7 @@ Manage apprentices
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="application_decision_in_review" name="application_decision" type="radio" value="in_review">
                 <label class="govuk-label govuk-radios__label" for="application_decision_in_review">
-                  In review 
+                  Review 
                 </label>
               </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="share">
@@ -182,7 +184,7 @@ Manage apprentices
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="application_decision_shortlist" name="application_decision" type="radio" value="shortlisted">
                 <label class="govuk-label govuk-radios__label" for="application_decision_shortlist">
-                  Shortlisted by employer 
+                  Shortlist for employer 
                 </label>
               </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="application_decision_shortlist">
@@ -210,7 +212,7 @@ Manage apprentices
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="application_decision_unsuccessful" name="application_decision" type="radio" value="unsuccessful" data-aria-controls="application_unsuccessful">
                 <label class="govuk-label govuk-radios__label" for="application_decision_unsuccessful">
-                  Unsuccessful
+                  Make unsuccessful
                 </label>
               </div>
               <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="application_unsuccessful">
