--- a/app/views/v12/provider/view-vacancy/3c-manage-applications.html
+++ b/app/views/v12/provider/view-vacancy/3c-manage-applications.html
@@ -12,26 +12,55 @@ Manage vacancy
 
 {% block content %}
 <div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    {% if data.alert=="clone" and data.user=='employer'%}
+    <div class="govuk-info-basic ">
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-full">
+          <!-- <span class="govuk-!-font-weight-bold">Activity</span> -->
+          <p class="govuk-body">You can now clone from the any vacancy management page. From your vacancies dashabord search for a vacancy and click manage.</p>
+          <p class="govuk-body govuk-!-margin-bottom-0"><a href="?alert=none" class="govuk-link--no-visited-state">Dismiss this notification</a></p>
+        </div>
+      </div>
+    </div>
+    {% endif %}
+
+        <span class="govuk-caption-l">Gloucestershire Health and Care NHS Foundation Trust</span>
+    <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
+
+
+
+
+
+<!-- Application actions -->
+<div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+    <div class="govuk-inset-text">
+      <p class="govuk-body" >
+        <a href="6a-share-applications" class="govuk-link govuk-link--no-visited-state">Share applications with employer</a>
+      </p>
+      <p class="govuk-body">
+        <a href="#" class="govuk-link govuk-link--no-visited-state">Make multiple applications unsuccessful</a>
+      </p>
+    </div>
   
-    <h1 class="govuk-heading-l">Share applications</h1>
+      </div>
+    </div>
+  <!-- end application actions -->
 
-    
-        
-        <p class="govuk-body" >
-          Select the applications you would like to share with <b>Gloucestershire Health and Care NHS Foundation Trust</b>. These applications will be shared anonymously.
-        </p>
-
-        <br>
   
-<!-- search box START -->
+  <!-- search box START -->
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      
     <fieldset class="govuk-fieldset">
       <legend class="govuk-visually-hidden">Search employer name or account name</legend>
       <div class="govuk-form-group search-field search-field-darker">
 
         <div class="search-input search-input-with-button">
           <label class="govuk-label" for="query">
+            <!--Client reference-->
             Search applicant name
           </label>
 
@@ -55,6 +84,8 @@ Manage vacancy
   </div>
 </div>
 <!-- search box END -->
+
+<!-- table START -->
 {%- from "govuk/components/tag/macro.njk" import govukTag -%}
 
 {%
@@ -221,19 +252,10 @@ Manage vacancy
     }
 ]
 %}
-
-
-<!-- table START -->
-  <form action="6b-check-share">
     <table class="govuk-table responsive-table" data-module="das-table-sort">
       <thead class="govuk-table__header">
         <tr class="govuk-table__row" role="row">
-          <th class="govuk-table__cell  govuk-checkboxes--small" style="width: 20px">
-            <div class="govuk-checkboxes__item govuk-!-padding-left-1">
-              <input class="govuk-checkboxes__input" id="select-all-applications" name="_select-all-applications" type="checkbox">
-              <label class="govuk-label govuk-checkboxes__label" for="select-all-applications">&nbsp;</label>
-            </div>
-          </th>
+
           <th scope="col" class="govuk-table__header" aria-sort="none">
             <a href="#" class="govuk-link das-table__sort das-table__sort--asc" aria-sort="ascending">Name</a>
           </th>
@@ -254,12 +276,6 @@ Manage vacancy
       <tbody class="govuk-table__body">
         {% for applicant in appsTableData %}
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-checkboxes--small">
-            <div class="govuk-checkboxes__item govuk-!-padding-left-1">
-              <input class="govuk-checkboxes__input" id="application-{{ loop.index }}" name="applications" type="checkbox" value="{{ applicant.id }}" {{ checked("applications", applicant.id) }}>
-              <label class="govuk-label govuk-checkboxes__label" for="application-{{ loop.index }}">&nbsp;</label>
-            </div>
-          </td>
           <td class="govuk-table__cell" role="gridcell" data-label="Name">
             <a href="../account/application-new" class="govuk-link govuk-link--no-visited-state">{{ applicant.name }}</a>
             <input type="hidden" name="{{ applicant.id }}-name" value="{{ applicant.name }}">
@@ -277,11 +293,6 @@ Manage vacancy
         {% endfor %}
       </tbody>
     </table>
-    <div class="govuk-button-group">
-      <button type="submit" class="govuk-button">Continue</button>
-    </div>
-</form>
-
 <!-- table END -->
 
 {% endblock %}
@@ -291,12 +302,7 @@ Manage vacancy
 <script>
   const selectAllCB = document.getElementById("select-all-applications");
   const allApplicantsCB = document.getElementsByName('applications');
-  selectAllCB.addEventListener('change', function () {
-    let newState = this.checked
-    for(let i=0; i<allApplicantsCB.length; i++){
-        allApplicantsCB[i].checked = newState;
-    }
-  })
+
   const tableSort = () => {
     const getCellValue = (tr, idx) => {
       return tr.children[idx].innerText || tr.children[idx].textContent
@@ -349,4 +355,5 @@ Manage vacancy
     tableSort();
   }
 </script>
+
 {% endblock %}
