--- a/app/views/v12/provider/account/application-new.html
+++ b/app/views/v12/provider/account/application-new.html
@@ -13,6 +13,7 @@ Manage apprentices
 {% endblock %}
 {% block content %}
 
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <section>
@@ -142,7 +143,7 @@ Manage apprentices
     <section>
      
       <form method="post">
-        
+   
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -163,7 +164,7 @@ Manage apprentices
                 <div class="govuk-form-group">
                   <label class="govuk-label" for="contact-by-email">
                   </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_in_review" name="application_decision_in_review" type="email" spellcheck="false">
+                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_in_review" name="application_decision" type="email" spellcheck="false">
                 </div>
               </div>
 
@@ -177,7 +178,7 @@ Manage apprentices
                 <div class="govuk-form-group">
                   <label class="govuk-label" for="contact-by-email">
                   </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_share" name="application_decision_share" type="email" spellcheck="false" autocomplete="email">
+                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_share" name="application_decision" type="email" spellcheck="false" autocomplete="email">
                 </div>
               </div>
               
@@ -191,7 +192,7 @@ Manage apprentices
                 <div class="govuk-form-group">
                   <label class="govuk-label" for="contact-by-phone">
                   </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_shortlist" name="application_decision_shortlist" type="tel" autocomplete="tel">
+                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_shortlist" name="aapplication_decision" type="tel" autocomplete="tel">
                 </div>
               </div>
 
@@ -205,7 +206,7 @@ Manage apprentices
                 <div class="govuk-form-group">
                   <label class="govuk-label" for="contact-by-phone">
                   </label>
-                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_successful" name="application_decision_successful" type="tel" autocomplete="tel">
+                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_successful" name="application_decision" type="tel" autocomplete="tel">
                 </div>
               </div>
               
@@ -233,7 +234,6 @@ Manage apprentices
           </fieldset>
         </div>
               
-      </form>
 
       <div class="govuk-button-group">
         <button class="govuk-button" data-module="govuk-button">
@@ -243,6 +243,7 @@ Manage apprentices
         <a class="govuk-link" href="#">Cancel</a>
       </div>
       
+    </form>
 
 
 
