--- a/app/views/v12/provider/account/application-review.html
+++ b/app/views/v12/provider/account/application-review.html
@@ -17,6 +17,18 @@ Manage apprentices
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
+    <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+      <div class="govuk-notification-banner__header">
+        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+          Success
+        </h2>
+      </div>
+      <div class="govuk-notification-banner__content">
+        <h3 class="govuk-notification-banner__heading">
+          Application set to in review
+        </h3>
+      </div>
+    </div>
 
     <section>
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-0">
