--- a/app/views/v12/provider/view/3c-manage-applications-shortlist.html
+++ b/app/views/v12/provider/view/3c-manage-applications-shortlist.html
@@ -103,8 +103,8 @@ Manage vacancy
     {
       name: "Keith Stewart",
       id: "678CFR0",
-      status: "New",
-      classes: "govuk-tag--blue",
+      status: "Shortlisted",
+      classes: "govuk-tag--yellow",
       date: "13 Oct 2022",
       disability: "Prefer not to say"
     },
