--- a/app/views/v12/provider/view/7a-check-successful.html
+++ b/app/views/v12/provider/view/7a-check-successful.html
@@ -15,12 +15,12 @@ Manage vacancy
   <div class="govuk-grid-column-two-thirds">
 
 
-    <h1 class="govuk-heading-l">Are you sure you want to tell this applicant that they have been accepted?</h1>
+    <h1 class="govuk-heading-l">Are you sure you want to make this applicant successful? </h1>
 
     
 
         <p class="govuk-body" >
-          This will notify [applicant name] to say that they have been accepted for this apprenticeship.
+          This will notify <b>[applicant name]</b> that their application has been successful.
         </p>
 
 
@@ -33,7 +33,7 @@ Manage vacancy
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
 
-            <form method="post" action="3b-manage-vacancy-shared">
+            <form method="post" action="3c-manage-applications-successful">
 
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
