--- a/app/views/v12/provider/view/3c-manage-applications-shared.html
+++ b/app/views/v12/provider/view/3c-manage-applications-shared.html
@@ -14,6 +14,19 @@ Manage vacancy
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
 
+    <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+      <div class="govuk-notification-banner__header">
+        <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+          Success
+        </h2>
+      </div>
+      <div class="govuk-notification-banner__content">
+        <h3 class="govuk-notification-banner__heading">
+          Applications successfully shared with employer
+        </h3>
+      </div>
+    </div>
+
         <span class="govuk-caption-l">Gloucestershire Health and Care NHS Foundation Trust</span>
     <h1 class="govuk-heading-l">Entry Level Development Engineer Apprentice</h1>
 
@@ -90,8 +103,8 @@ Manage vacancy
     {
       name: "Keith Stewart",
       id: "678CFR0",
-      status: "New",
-      classes: "govuk-tag--blue",
+      status: "Shared",
+      classes: "govuk-tag--yellow",
       date: "13 Oct 2022",
       disability: "Prefer not to say"
     },
